--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,14 @@
   margin: 0 auto;
 }
 
+body {
+  background-image: url('../img/background-pagina.png');
+  background-position: center;
+}
+
 #page {
-  width: 80%;
-  margin: 15px auto;
+  width: 60%;
+  margin: auto;
 }
 
 /* Header */
@@ -17,8 +22,23 @@
 
 .box-header {
   width: 100%;
-  height: 250px;
-  background: darkslategrey;
+  height: 500px;
+  background-image: url(../img/background-banner.jpeg);
+  background-size: cover;
+  margin-top: 25px;
+  border: 12px solid white;
+  text-align: center;
+  padding-top: 90px;
+}
+
+.box-header img {
+  width: 50%;
+}
+
+.box-header h1 {
+  font-family: montserrat;
+  text-transform: uppercase;
+  color: white;
 }
 
 .menu {
