--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,47 @@ body {
   color: white;
 }
 
+/* Menu */
+
 .menu {
+  background: #666;
   width: 100%;
-  height: 50px;
-  background: cadetblue;
+  line-height: 70px;
+}
+
+.menu ul {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+}
+
+.items li {
+  display: inline-block;
+  text-transform: uppercase;
+  font-family: 'montserrat';
+  font-size: 0.8em;
+  color: white;
+  padding: 0 15px;
+  font-weight: 700;
+}
+
+.items li a {
+  display: inline-block;
+  border-bottom: 4px solid transparent;
+}
+
+.items li a:link {
+  text-decoration: none;
+  color: white;
+}
+
+.items li a:visited {
+  text-decoration: none;
+  color: white;
+}
+
+.items li a:hover {
+  border-color: white;
 }
 
 #main-wrap::after {
